Added CSVeed logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/csveed.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
     <!--[if lt IE 9]>
@@ -20,7 +21,8 @@
     <header>
       <div class="inner">
         <h1>CSVeed</h1>
-        <h2>Light-weight, easy-to-use Java-based CSV utility</h2>
+        <h2>Easy-to-use CSV to Java Bean utility</h2>
+        <img class="csveed-logo" src="images/csveed-logo-white.png">
         <a href="https://github.com/robert-bor/CSVeed" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
