Copied various page from the wiki to the site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/csveed.css" media="screen" />
@@ -14,7 +15,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>CSVeed by robert-bor</title>
+    <title>CSVeed</title>
   </head>
 
   <body>
@@ -130,6 +131,17 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
         </section>
 
         <aside id="sidebar">
+
+            <p class="site-link"><a href="index.html">Home</a></p>
+            <p class="site-link">Manual</p>
+            <p class="site-link-sub"><a href="annotations.html">Annotations</a></p>
+            <p class="site-link-sub"><a href="api.html">API</a></p>
+            <p class="site-link">Background</p>
+            <p class="site-link-sub"><a href="architecture.html">Architecture</a></p>
+            <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
+
+            <hr>
+
           <a href="https://github.com/robert-bor/CSVeed/zipball/master" class="button">
             <small>Download</small>
             .zip file
