Comparison matrix added to site

--- a/comparison.html
+++ b/comparison.html
@@ -111,7 +111,7 @@
 
             <h1>Comparison matrix</h1>
 
-            <p>Check out the different attributes of the afore-mentioned Java CSV libraries and CSVeed in the <a href="https://github.com/robert-bor/CSVeed/wiki/Comparison-of-Java-CSV-libraries">Comparison Matrix</a>.</p>
+            <p>Check out the different attributes of the afore-mentioned Java CSV libraries and CSVeed in the <a href="comparison-matrix.html">Comparison Matrix</a>.</p>
 
         </section>
 
