Updated navbar aside

--- a/api.html
+++ b/api.html
@@ -45,6 +45,7 @@
             <p class="site-link">Background</p>
             <p class="site-link-sub"><a href="architecture.html">Architecture</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
+            <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
 
             <hr>
 
