--- a/index.html
+++ b/index.html
@@ -85,10 +85,15 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
                 <span class="s">"\"Beta\";1901;\"22-01-1943\"\n"</span><span class="o">+</span>
                 <span class="s">"\"Gamma\";1902;\"30-09-1978\""</span>
         <span class="o">);</span>
+        <span class="s"></span>
         <span class="n">CsvReader</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvReaderImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span> <span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">);</span>
         <span class="kd">final</span> <span class="n">List</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">beans</span> <span class="o">=</span> <span class="n">csvReader</span><span class="o">.</span><span class="na">readBeans</span><span class="o">();</span>
+        <span class="s"></span>
         <span class="k">for</span> <span class="o">(</span><span class="n">Bean</span> <span class="n">bean</span> <span class="o">:</span> <span class="n">beans</span><span class="o">)</span> <span class="o">{</span>
-            <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">bean</span><span class="o">.</span><span class="na">getName</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span><span class="n">bean</span><span class="o">.</span><span class="na">getNumber</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span><span class="n">bean</span><span class="o">.</span><span class="na">getDate</span><span class="o">());</span>
+            <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getName</span><span class="o">()+</span><span class="s">" | "</span> <span class="o">+</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getNumber</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getDate</span><span class="o">());</span>
         <span class="o">}</span>
 </pre></div>
 
@@ -100,15 +105,21 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
                 <span class="s">"\"Beta\";1901;\"22-01-1943\"\n"</span><span class="o">+</span>
                 <span class="s">"\"Gamma\";1902;\"30-09-1978\""</span>
         <span class="o">);</span>
-        <span class="n">CsvReader</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvReaderImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span> <span class="k">new</span> <span class="n">BeanReaderInstructionsImpl</span><span class="o">(</span><span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">))</span>
+                <span class="s"></span>
+        <span class="n">CsvReader</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvReaderImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span>
+                    <span class="k">new</span> <span class="n">BeanReaderInstructionsImpl</span><span class="o">(</span><span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">))</span>
                 <span class="o">.</span><span class="na">setMapper</span><span class="o">(</span><span class="n">ColumnNameMapper</span><span class="o">.</span><span class="na">class</span><span class="o">)</span>
                 <span class="o">.</span><span class="na">mapColumnNameToProperty</span><span class="o">(</span><span class="s">"name"</span><span class="o">,</span> <span class="s">"name"</span><span class="o">)</span>
                 <span class="o">.</span><span class="na">mapColumnNameToProperty</span><span class="o">(</span><span class="s">"number"</span><span class="o">,</span> <span class="s">"number"</span><span class="o">)</span>
                 <span class="o">.</span><span class="na">mapColumnNameToProperty</span><span class="o">(</span><span class="s">"date"</span><span class="o">,</span> <span class="s">"date"</span><span class="o">)</span>
                 <span class="o">.</span><span class="na">setDate</span><span class="o">(</span><span class="s">"date"</span><span class="o">,</span> <span class="s">"dd-MM-yyyy"</span><span class="o">);</span>
+        <span class="s"></span>
         <span class="kd">final</span> <span class="n">List</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">beans</span> <span class="o">=</span> <span class="n">csvReader</span><span class="o">.</span><span class="na">readBeans</span><span class="o">();</span>
         <span class="k">for</span> <span class="o">(</span><span class="n">Bean</span> <span class="n">bean</span> <span class="o">:</span> <span class="n">beans</span><span class="o">)</span> <span class="o">{</span>
-            <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">bean</span><span class="o">.</span><span class="na">getName</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span><span class="n">bean</span><span class="o">.</span><span class="na">getNumber</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span><span class="n">bean</span><span class="o">.</span><span class="na">getDate</span><span class="o">());</span>
+            <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getName</span><span class="o">()+</span><span class="s">" | "</span> <span class="o">+</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getNumber</span><span class="o">()+</span><span class="s">" | "</span><span class="o">+</span>
+                <span class="n">bean</span><span class="o">.</span><span class="na">getDate</span><span class="o">());</span>
         <span class="o">}</span>
 </pre></div>
 
