Removed untruth from the writer row in the comparison

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -426,7 +426,7 @@
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
-                    <td class="appraisal">yes</td>
+                    <td class="appraisal">no</td>
                 </tr>
             </tbody>
         </table>
