--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -80,7 +80,7 @@
                     <td class="appraisal">none</td>
                     <td class="appraisal">none</td>
                     <td class="appraisal">none</td>
-                    <td class="appraisal">Spring, SLF4J</td>
+                    <td class="appraisal">Spring <a href="architecture.html#spring"><img src="images/question-mark.png"/></a>, SLF4J</td>
                 </tr>
                 <tr>
                     <td class="property">Logging support</td>
@@ -100,7 +100,7 @@
                     <td class="appraisal">2.3</td>
                     <td class="appraisal">2.0.1</td>
                     <td class="appraisal">1.4.0</td>
-                    <td class="appraisal">0.2.2</td>
+                    <td class="appraisal">0.2.2 <a href="architecture.html#v1.0.0"><img src="images/question-mark.png"/></a></td>
                 </tr>
                 <tr>
                     <td class="property">Last updated</td>
@@ -397,7 +397,7 @@
                     <td class="appraisal">no</td>
                     <td class="appraisal">yes, untried</td>
                     <td class="appraisal">no</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">no <a href=""><img src="images/question-mark.png"/></a></td>
                 </tr>
             </tbody>
         </table>
@@ -426,7 +426,7 @@
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">no <a href="architecture.html#writer"><img src="images/question-mark.png"/></a></td>
                 </tr>
             </tbody>
         </table>
@@ -623,7 +623,7 @@
                     <td class="appraisal">?</td>
                     <td class="appraisal">?</td>
                     <td class="appraisal">?</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">no <a href=""><img src="images/question-mark.png"/></a></td>
                 </tr>
                 <tr>
                     <td class="property">single facade</td>
