--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
             <p class="site-link-sub"><a href="api.html">API</a></p>
             <p class="site-link">Background</p>
             <p class="site-link-sub"><a href="architecture.html">Architecture</a></p>
+            <p class="site-link-sub"><a href="design-choices.html">Design Choices</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
             <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
 
