Made the images transparant

--- a/design-choices.html
+++ b/design-choices.html
@@ -42,6 +42,8 @@
                 <li><a href="#layering">Architecture</a>; why have the layering of CSV and not roll all into one layer?</li>
                 <li><a href="#errors">Error feedback</a>; what is your thing with error feedback?</li>
                 <li><a href="#facade">Facade</a>; why the Facade?</li>
+                <li><a href="#deep-conversion">Deep conversion</a>; will CSVeed have deep conversion in due time?</li>
+                <li><a href="#split-and-join">Splits and joins</a>; will CSVeed have splits and joins in due time?</li>
             </ul>
             
             <h2 id="tokenizer">Tokenizer</h2>
@@ -87,6 +89,20 @@
             <p>The user, on the other hand, is given a treat; it gets the simplest possible interface to interact with the library. The community has shown itself very enthousiastic over the simplicity of JavaCSV.</p>
 
             <p>CSVeed takes a different route. The maintenance mess of just two classes has been evaded, while the user still gets a simple interface. The way this is done is by setting up a Facade that shields the underlying complexity.</p>
+
+            <h2 id="deep-conversion">Deep Conversion</h2>
+
+            <p>...</p>
+
+            <img src="images/deep-conversion.png" width="500"/>
+
+            <h2 id="split-and-join">Splits and Joins</h2>
+
+            <p>...</p>
+
+            <img src="images/split.png"/>
+
+            <img src="images/join.png"/>
 
         </section>
 
