--- a/design-choices.html
+++ b/design-choices.html
@@ -48,6 +48,10 @@
             
             <h2 id="tokenizer">Tokenizer</h2>
 
+            <p>Most CSV tools that I have seen use a mix of if-then-else logic and forward references for CSV parsing. Having tried these approaches myself as well, I find them error-prone and hard to maintain.</p>
+
+            <p>The goal of CSVeed was to have a tokenizer that read just one symbol at a time, without forward referencing. Also, I wanted it to determine its next state purely on the current symbol and state. I can imagine that people hate the huge switch-case construction (Cobertura does!), I can just as well imagine that people love it for its clarity and overview. I belong to the latter category.</p>
+
             <h2 id="v1.0.0">v1.0.0</h2>
 
             <p>I believe a version 1 must have seen some time in the trenches before it can be elevated to that position. That means people must have used it, it must have run stable in production software and in general it must have existed for some time. Software that is immediately released as version 1 is not to be trusted.</p>
@@ -72,6 +76,10 @@
 
             <h2 id="layering">Architecture</h2>
 
+            <p>Layering serves a crucial purpose as it helps to define system boundaries. Every layer in CSVeed aims to solve one particular problem.</p>
+
+            <p>CSVeed also offers three points of entry into the library. The easiest and recommend route is through the Facade, aka the <a href="architecture.html#api">api</a> layer. The other two options are to plug directly into the <a href="architecture.html#bean">bean</a> or <a href="architecture.html#row">row</a> layers. The <a href="architecture.html#token">token</a> layer is not intended for direct access, though it would be possible.</p>
+
             <h2 id="errors">Error feedback</h2>
 
             <p>Dealing with the reading of CSV is synonymous to dealing with errors. The 'structure' of a CSV file leaves a lot to be desired – there is no file that says what it structure will be like with XML. Users can (and often do) change CSV at will before sending it off to an import job. Anyone having worked with CSV for a prolonged period of time knows that errors are part of the essence of CSV files.</p>
@@ -92,17 +100,29 @@
 
             <h2 id="deep-conversion">Deep Conversion</h2>
 
-            <p>...</p>
+            <p>Deep Conversion is the ability to build up a uni-directional graph of entities from a CSV file:</p>
 
             <img src="images/deep-conversion.png" width="500"/>
 
+            <p>Deep Conversion is currently not support by CSVeed, this this is planned for the near future.</p>
+
             <h2 id="split-and-join">Splits and Joins</h2>
 
-            <p>...</p>
+            <p>A split is the ability to split a single cell into multiple Bean properties:</p>
 
             <img src="images/split.png"/>
 
+            <p>A practical example would to split a cell like, for example, "€ 50" into separate currency and amount.</p>
+
+            <p>A join is the ability to join multiple cells into a single Bean property:</p>
+
             <img src="images/join.png"/>
+
+            <p>A practical example would be to merge first name and last name into a single property called full name.</p>
+
+            <p>The main challenge with splits and joins is basically to supply a structure where clients can create converters for an array of Strings or BeanProperty instances, so that symbols can either be inserted or removed.</p>
+
+            <p>CSVeed currently does not have split and join capabilities, though this is planned for the near future.</p>
 
         </section>
 
