Added dry runs to the design choices doc

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -643,7 +643,7 @@
                     <td class="appraisal">?</td>
                     <td class="appraisal">?</td>
                     <td class="appraisal">?</td>
-                    <td class="appraisal">no <a href=""><img src="images/question-mark.png"/></a></td>
+                    <td class="appraisal">no <a href="design-choices.html#dryruns"><img src="images/question-mark.png"/></a></td>
                 </tr>
                 <tr>
                     <td class="property">single facade</td>
