--- a/architecture.html
+++ b/architecture.html
@@ -123,6 +123,7 @@
             <p class="site-link-sub"><a href="design-choices.html">Design Choices</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
             <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
+            <p class="site-link-sub"><a href="rfc4180.html">RFC 4180</a></p>
 
             <hr>
 
