--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
             <p class="site-link-sub"><a href="design-choices.html">Design Choices</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
             <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
+            <p class="site-link-sub"><a href="rfc4180.html">RFC 4180</a></p>
 
             <hr>
 
