Updated comparison matrix

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -475,7 +475,7 @@
                     <td class="appraisal">not mentioned</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">yes</td>
                 </tr>
                 <tr>
                     <td class="property">Manual</td>
