Various type and cosmetic style changes

--- a/rfc4180.html
+++ b/rfc4180.html
@@ -130,9 +130,9 @@
 
         <h3 id="fixed-symbols">Its symbols are fixed</h3>
 
-        <p>USA uses ',' as a separator between cells, whereas Northern Europe is accustomed to a ';' symbol. It probably started when the Microsoft Excel people tried to cope with the European comma symbol instead of the dot symbol for cent amounts.</p>
+        <p>USA uses ',' as a separator between cells, whereas Northern Europe is accustomed to a ';' symbol. It probably started when the Microsoft Excel people tried to cope with the European comma symbol instead of the dot symbol for money amounts.</p>
 
-        <p>Nevertheless, the legacy is there and for us to cope with. Both kinds of CSV as perfectly legitimate, yet RFC 4180 caters for only one type.</p>
+        <p>Nevertheless, the legacy is there and for us to cope with. Both kinds of CSV are perfectly legitimate, yet RFC 4180 caters for only one type.</p>
 
         <h3 id="spaces">No trailing and leading spaces</h3>
 
