Spring dependency removed from comparison matrix

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -80,7 +80,7 @@
                     <td class="appraisal">none</td>
                     <td class="appraisal">none</td>
                     <td class="appraisal">none</td>
-                    <td class="appraisal">Spring <a href="design-choices.html#spring"><img src="images/question-mark.png"/></a>, SLF4J</td>
+                    <td class="appraisal">SLF4J</td>
                 </tr>
                 <tr>
                     <td class="property">Logging support</td>
