Updated @CsvConverter docs

--- a/comparison.html
+++ b/comparison.html
@@ -119,7 +119,7 @@
 
             <p>Of the above libraries this one cost me the most trouble to get to the intricacies. Documentation on the API is scarce, though a number of useful sample projects have been provided. The library works with the concept of high- and low-level interfaces, high being similar to the bean reader and low the row reader. Its killer feature is that it supports deep conversion.</p>
 
-            <p>What irks me most about this interface is that one must define all properties with annotations, even having to tell it what converter it must use even for Long. This is not very convenient. I find error feedback lacking, although the line and position are reported, you cannot see the cell that went wrong.</p>
+            <p>What irks me most about this interface is that one must define all properties with annotations, even having to tell it what converter it must use, for example for converting text to Long. This is not very convenient. I find error feedback lacking, although the line and position are reported, you cannot see the cell that went wrong.</p>
 
             <h1>Comparison matrix</h1>
 
